# pynus

./: .gitignore  LICENSE  README.md  make_nwpnus_dynamic.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
pynus/: __init__.py  backend.py  decode.py  libnusdas.py  libnwp.py  nusenv.py  nusparm.py
